--- a/style.css
+++ b/style.css
@@ -1,4 +1,69 @@
-figure {
+body {
+    color: hsl(210, 51%, 20%);
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    font-style: light;
+  }
+  
+  .content-wrapper {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 960px;
+  }
+  
+  header {
+    text-align: center;
+    /*background-color: lightgray;*/
+    /*border: 5px solid black;*/
+  }
+  
+  .author {
+    display: inline;
+  }
+  
+  .author-title {
+    display: inline;
+  }
+  
+  .byline .separator {
+    display: inline;
+  }
+  
+  h1 {
+    /*Heading for the entire article*/
+    font-size: 3rem;
+    font-family: "Bebas Neue", cursive;
+    margin: 0;
+    margin-top: 20px;
+  }
+  
+  .byline {
+    font-family: "Bebas Neue", cursive;
+    font-size: 1.2rem;
+  }
+  
+  h2 {
+    font-family: "Bebas Neue", cursive;
+    font-size: 2rem;
+  }
+  
+  h3 {
+    font-family: "Bebas Neue", cursive;
+    font-size: 2rem;
+  }
+  
+  h4 {
+    /*text-transform: uppercase;*/
+    font-size: 1.5rem;
+  }
+  
+  footer {
+    clear: both;
+    text-align: center;
+    padding: 30px;
+  }
+  
+  figure {
     float: right;
     /*border: 5px solid black;*/
     /*padding: 10px;*/
@@ -18,4 +83,13 @@ figure {
   
   section {
     clear: both;
+    margin-top: 60px;
+  }
+  
+  ul {
+    font-style: italic;
+  }
+  
+  li {
+    margin-bottom: 20px;
   }
