--- a/flex.css
+++ b/flex.css
@@ -88,7 +88,6 @@ body {
   text-underline-offset: 6px;
 }
 
-
 header {
   clear: both;
   text-align: center;
@@ -98,6 +97,7 @@ header {
   margin-bottom: 30px;
   background-color: skyblue;
   display: flex;
+  flex-direction: column;
 }
 
 h1 {
