--- a/flex.css
+++ b/flex.css
@@ -113,6 +113,7 @@ h1 {
   background-color: seagreen;
   font-family: "Bebas Neue", sans-serif;
   font-size: 1.2rem;
+  display: inline-flex;
 }
 
 .author {
