Turning main into flex and colorizing sections

--- a/flex.css
+++ b/flex.css
@@ -112,10 +112,12 @@ h1 {
 }
 
 main {
+  display: flex;
 }
 
 section {
-  clear: both;
+  /*clear: both;*/
+  background-color: skyblue;
 }
 
 h3 {
