--- a/flex.css
+++ b/flex.css
@@ -125,17 +125,17 @@ section {
 h3 {
   font-family: "Bebas Neue", sans-serif;
   font-size: 2rem;
-  /*
-  display: block;
-  float: left;
-  */
   width: 100%;
   margin-bottom: 0px;
 }
 
 figure {
+  /*
   float: left;
   display: inline-block;
+  */
+  display: flex;
+  flex-direction: column;
   margin-left: 0;
 }
 
