--- a/flex.css
+++ b/flex.css
@@ -32,6 +32,7 @@ body {
   margin-left: .5rem;
   margin-top: .5rem;
   margin-bottom: .5rem;
+  background-color: cadetblue;
 }
 
 .breadcrumbs li {
@@ -65,6 +66,7 @@ body {
   padding: 0;
   margin-top: .5rem;
   margin-bottom: .5rem;
+  background-color: seagreen;
 }
 
 .main_nav li {
@@ -117,7 +119,6 @@ main {
 }
 
 section {
-  background-color: skyblue;
   display: flex;
   flex-wrap: wrap;
 }
@@ -143,10 +144,6 @@ figcaption {
 
 .text {
   max-width: 400px;
-  /*
-  float: left;
-  display: inline-block;
-  */
   display: flex;
   flex-direction: column;
 }
