--- a/flex.css
+++ b/flex.css
@@ -15,11 +15,12 @@ body {
 
 /* Top navigation bar */
 .navbar {
-  display: block;
+  /*display: block;*/
   width: 100%;
   padding: 0;
   text-align: right;
   background-color: darkgray;
+  display: flex;
 }
 
 /* Breadcrumb Menu */
