--- a/flex.css
+++ b/flex.css
@@ -37,6 +37,8 @@ body {
   margin-top: .5rem;
   margin-bottom: .5rem;
   background-color: cadetblue;
+  display: inline-flex;
+  justify-content: flex-start;
 }
 
 .breadcrumbs li {
@@ -72,6 +74,8 @@ body {
   margin-top: .5rem;
   margin-bottom: .5rem;
   background-color: seagreen;
+  display: inline-flex;
+  justify-content: flex-end;
 }
 
 .main_nav li {
