--- a/flex.css
+++ b/flex.css
@@ -27,10 +27,6 @@ body {
 .breadcrumbs {
   color: white;
   font-style: italic;
-  /*
-  display: inline-block;
-  float: left;
-  */
   width: 50%;
   padding: 0;
   margin-left: .5rem;
@@ -83,8 +79,11 @@ body {
 }
 
 .main_nav li {
-  display: inline-block;
-  margin: .5rem;
+  display: inline-flex;
+  margin: 0;
+  margin-right: .5rem;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
 }
 
 .main_nav a {
