--- a/flex.css
+++ b/flex.css
@@ -8,7 +8,7 @@ body {
 .content-wrapper {
   margin-right: auto;
   margin-left: auto;
-  max-width: 1100px;
+  max-width: 960px;
   display: flex;
   flex-direction: column;
 }
@@ -126,6 +126,7 @@ h1 {
 main {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 section {
